<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:background="@drawable/borders"
    android:layout_gravity="top"
    android:orientation="vertical"
    tools:context="com.example.shapeorcolor.FinalResults" >
    
    <TextView
        android:id="@+id/gameOverTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.2"
        android:gravity="center"
        android:text="@string/game_over"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />
    
    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:orientation="horizontal" >
     
	     <TextView
	        android:id="@+id/rightAnswersTextView"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:text="@string/right_answers"
	        android:textColor="@color/white"/>
	     
	     <TextView
	        android:id="@+id/rightAnswersNrTextView"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:text="@string/right_answers"
	        android:textColor="@color/white" />
	     
	</LinearLayout>
	
    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:orientation="horizontal" >
     
	     <TextView
	        android:id="@+id/wrongAnswersTextView"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:text="@string/wrong_answers"
	        android:textColor="@color/white"/>
	     
	     <TextView
	        android:id="@+id/wrongAnswersNrTextView"
	        android:layout_width="wrap_content"
	        android:layout_height="match_parent"
	        android:text="@string/wrong_answers"
	        android:textColor="@color/white"/>
	     
	</LinearLayout>
    
    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:orientation="horizontal" >
     
	     <TextView
	        android:id="@+id/finalScoreTextView"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="0.5"
	        android:gravity="center_horizontal"
	        android:text="@string/final_score"
	        android:textColor="@color/white"/>
	     
	     <TextView
	        android:id="@+id/finalScoreNrTextView"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="0.5"
	        android:gravity="center_horizontal"
	        android:text="@string/final_score"
	        android:textColor="@color/white"/>
	     
	</LinearLayout>
	
    <TextView
        android:id="@+id/spaceTextView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.4"
        android:gravity="center"
        android:text="" />
	
    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:orientation="horizontal" >
     
	     <ImageButton
	        android:id="@+id/replayGameButton"
	       	android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="0.5"
	        android:gravity="center_horizontal"
	        android:background="@null"
	        android:contentDescription="@string/desc"
	        android:onClick="startPlay"
	        android:src="@drawable/ic_rotate" />
	     
	     <ImageButton
	        android:id="@+id/selectOtherButton"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="0.5"
	        android:gravity="center_horizontal"
	        android:background="@null"
	        android:contentDescription="@string/desc"
	        android:onClick="startPlay"
	        android:src="@drawable/ic_cross" />
	     
	</LinearLayout>
	
	<LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:orientation="horizontal" >
	     
	    <TextView
	        android:id="@+id/replayGameTextView"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="0.5"
	        android:gravity="center_horizontal"
	        android:text="@string/replay_game"
	        android:textColor="@color/white" />
	    
	    <TextView
	        android:id="@+id/selectOtherTextView"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="0.5"
	        android:gravity="center_horizontal"
	        android:text="@string/exit"
	        android:textColor="@color/white" />
	    
	</LinearLayout>
	  
</LinearLayout>

