<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical"
    tools:context="com.example.shapeorcolor.Shapes" >
     
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="0dp"
         android:layout_weight="1"
         android:layout_gravity="center_horizontal"
         android:background="@color/grey"
         android:orientation="horizontal" >
     
	      <ImageView
	        android:id="@+id/shape1ImageView"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="0.5"
	        android:background="@null"
	        android:contentDescription="@string/desc"
	        android:src="@drawable/ic_filled_b"/>
	      
	       <ImageView
	        android:id="@+id/shape2ImageView"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="0.5"
	        android:background="@null"
	        android:contentDescription="@string/desc"
	        android:src="@drawable/ic_filled_r"/>
    
	</LinearLayout>
	
     <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:layout_marginRight="5dp"
         android:layout_marginLeft="5dp"
         android:layout_marginBottom="20dp"
         android:background="@color/grey"
         android:orientation="horizontal" >
     
	      <Button
	        android:id="@+id/shapeButton"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="0.5"
			android:layout_marginRight="5dp"
			android:layout_marginEnd="5dp"
	        android:background="@drawable/borders"
			android:text="@string/shape"
			android:textColor="@color/white"
			android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
	      
	       <Button
	        android:id="@+id/colorButton"
	        android:layout_width="0dp"
	        android:layout_height="match_parent"
	        android:layout_weight="0.5"
        	android:layout_marginLeft="5dp"
        	android:layout_marginStart="5dp"
	        android:background="@drawable/borders"
	        android:text="@string/color"
	        android:textColor="@color/white"
	        android:textStyle="bold"
            android:textAppearance="?android:attr/textAppearanceLarge"/>
    
	</LinearLayout>
	

</LinearLayout>
